# yagit

gi_core/: CMakeLists.txt
